new pages was added, rating sceleton was implemented

--- a/x-maf_league/index.html
+++ b/x-maf_league/index.html
@@ -9,10 +9,13 @@
     </div>
     <div class="sub_header">
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#news">Rating</a></li>
-            <li><a href="#contact">Schedule</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="content/pages/rating.html">Rating</a></li>
+            <li><a href="content/pages/schedule.html">Schedule</a></li>
         </ul>
+    </div>
+    <div class="content">
+
     </div>
 </body>
 <footer>
