nav menu was temp blocked

--- a/x-maf_league/content/pages/rating.html
+++ b/x-maf_league/content/pages/rating.html
@@ -9,9 +9,9 @@
     </div>
     <div class="sub_header">
         <ul>
-            <li><a href="../../index.html">Home</a></li>
+            <li><a href="#">Home</a></li>
             <li><a href="rating.html">Rating</a></li>
-            <li><a href="schedule.html">Schedule</a></li>
+            <li><a href="#">Schedule</a></li>
         </ul>
     </div>
     <div class="content">
