rating was implemented, new pfotoes was added

--- a/x-maf_league/content/pages/rating.html
+++ b/x-maf_league/content/pages/rating.html
@@ -14,8 +14,130 @@
             <li><a href="#">Schedule</a></li>
         </ul>
     </div>
-    <div class="content">
-        
+    <div class="rating_content">
+            <h2>Top 20</h2>
+            <table>
+                <tr>
+                    <td>1</td>
+                    <td><img src="../../images/users/arhi.jpg"/></td>
+                    <td>Архи</td>
+                    <td>19,7</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td><img src="../../images/users/reinoven.jpg"/></td>
+                    <td>Рейновен</td>
+                    <td>17,6</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td><img src="../../images/users/flash.jpg"/></td>
+                    <td>Флэш</td>
+                    <td>12,3</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td><img src="../../images/users/krista.jpg"/></td>
+                    <td>Криста</td>
+                    <td>11,8</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td><img src="../../images/users/kinder.jpg"/></td>
+                    <td>Киндер</td>
+                    <td>10,2</td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td><img src="../../images/users/kris.jpg"/></td>
+                    <td>Крис</td>
+                    <td>9</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td><img src="../../images/users/freddy.jpg"/></td>
+                    <td>Freddy Krueger</td>
+                    <td>8,8</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td><img src="../../images/users/vb.jpg"/></td>
+                    <td>Валерун-Балерун</td>
+                    <td>8,7</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td><img src="../../images/users/blain.jpg"/></td>
+                    <td>Блэйн</td>
+                    <td>7,4</td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td><img src="../../images/users/cat.jpg"/></td>
+                    <td>Кошка</td>
+                    <td>6</td>
+                </tr>
+                <tr>
+                    <td>11</td>
+                    <td><img src="../../images/users/zodiak.jpg"/></td>
+                    <td>Зодиак</td>
+                    <td>6</td>
+                </tr>
+                <tr>
+                    <td>12</td>
+                    <td><img src="../../images/users/alisa.jpg"/></td>
+                    <td>Алиса</td>
+                    <td>6</td>
+                </tr>
+                <tr>
+                    <td>13</td>
+                    <td><img src="../../images/users/jnec.jpg"/></td>
+                    <td>Жнец</td>
+                    <td>6</td>
+                </tr>
+                <tr>
+                    <td>14</td>
+                    <td><img src="../../images/users/gadjet.jpg"/></td>
+                    <td>Гаджет</td>
+                    <td>6</td>
+                </tr>
+                <tr>
+                    <td>15</td>
+                    <td><img src="../../images/users/avrora.jpg"/></td>
+                    <td>Аврора</td>
+                    <td>6</td>
+                </tr>
+                <tr>
+                    <td>16</td>
+                    <td><img src="../../images/users/voron.jpg"/></td>
+                    <td>Ворон</td>
+                    <td>6</td>
+                </tr>
+                <tr>
+                    <td>17</td>
+                    <td><img src="../../images/users/germiona.jpg"/></td>
+                    <td>Гермиона</td>
+                    <td>6</td>
+                </tr>
+                <tr>
+                    <td>18</td>
+                    <td><img src="../../images/users/kartman.jpg"/></td>
+                    <td>Картман</td>
+                    <td>4,3</td>
+                </tr>
+                <tr>
+                    <td>19</td>
+                    <td><img src="../../images/users/andersen.jpg"/></td>
+                    <td>Андерсен</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <td>20</td>
+                    <td><img src="../../images/users/sky.jpg"/></td>
+                    <td>Sky</td>
+                    <td>3,3</td>
+                </tr>
+            </table>
     </div>
 </body>
 <footer>
