Schedule page was added

--- a/x-maf_league/content/pages/rating.html
+++ b/x-maf_league/content/pages/rating.html
@@ -11,7 +11,8 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="rating.html">Rating</a></li>
-            <li><a href="#">Schedule</a></li>
+            <li><a href="schedule.html">Schedule</a></li>
+            <li><a href="#">Scoring</a></li>
         </ul>
     </div>
     <div class="rating_content">
