--- a/x-maf_league/index.html
+++ b/x-maf_league/index.html
@@ -12,6 +12,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="content/pages/rating.html">Rating</a></li>
             <li><a href="content/pages/schedule.html">Schedule</a></li>
+            <li><a href="content/pages/scoring.html">Scoring</a></li>
         </ul>
     </div>
     <div class="content">
