wild hunt tournament was updated

--- a/x-maf_league/content/pages/schedule.html
+++ b/x-maf_league/content/pages/schedule.html
@@ -42,10 +42,10 @@
             <tr class=future>
                 <td>
                     <!--<a href="https://vk.com/terramafiashiveringisles" target="_blank">-->
-                        <p>Wild Hunt: Sword of Destiny</p>
+                    <a href="https://vk.com/wildhuntmafia" target="_blank">Wild Hunt: Sword of Destiny</a>
                     <!--</a>-->
                 </td>
-                <td>11.05.2019</td>
+                <td>06.05.2019</td>
             </tr>
         </table>
     </div>
