Rating was updated

--- a/thomas-corner/content/pages/about.html
+++ b/thomas-corner/content/pages/about.html
@@ -3,8 +3,6 @@
     <link rel="shortcut icon" href="../../images/thomas-icon.png" type="image/x-icon" />
     <link rel="stylesheet" href="../../styles/main.css">
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="../../scripts/common.js"></script>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
     <div class="header">
@@ -13,10 +11,11 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="rating.html">Rating</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="about.html">About</a></li>
         </ul>
     </div>
-    <div id="rating_content" class="content">
+    <div id="about" class="about">
+
     </div>
 </body>
 <footer>
