--- a/thomas-corner/content/pages/rating.html
+++ b/thomas-corner/content/pages/rating.html
@@ -16,6 +16,12 @@
             <li><a href="#">About</a></li>
         </ul>
     </div>
+    <div id="ratingOrdering" class="rating_ordering">
+        <ul>
+            <li><a id="season" class="active" href="#first_season">Season II</a></li>
+            <li><a id="alltime" href="#all_time">All time</a></li>
+        </ul>
+    </div>
     <div id="rating_content" class="content">
     </div>
 </body>
