about page was added

--- a/thomas-corner/content/pages/about.html
+++ b/thomas-corner/content/pages/about.html
@@ -14,8 +14,79 @@
             <li><a href="about.html">About</a></li>
         </ul>
     </div>
-    <div id="about" class="about">
+    <div class="about">
+        <h2>About</h2>
+        <p>
+            Thomas Gaming — сообщество игроков в мафию, для которых спортивная мафия не пустой звук.
+            Здесь каждый хочет научиться играть лучше, учавствовать в турнирах и побеждать.
+        </p>
 
+        <div id="idea">
+            <p>
+                Основная идея проекта — собираться и играть игры в условиях, максимально приближенных к
+                турнирным. Стол собирается 1 раз в неделю (в основном в пятницу), играется 4-5 игр одним и тем же
+                составом. После каждой игры в обязательном порядке (в устной или письменной форме) проводится рефлексия
+                и расстановка дополнительных балов. В состав вечера входят от 8 постоянных игроков TG, 1 наставник
+                и 1 игрок "на новенького" — кандидат в постоянный состав проекта.
+            </p>
+        </div>
+
+        <div id="scoring">
+            <p>
+                Система очков проекта построена таким образом, чтобы игроки могли получать дополнительные балы за
+                хорошую игру или напротив, получать штрафные балы за плохую. За основу была взята система ФИИМ с некоторыми
+                изменениями:
+                <ul>
+                    <li>За лучший ход игрок может получить -0.2, 0, 0.2 или 0.4 бала за 0, 1, 2 и 3 мафов соответственно;</li>
+                    <li>Игрок, вскрывшийся шерифом и озвучив неправильные проверки (черного дал красным и наоборот) и не откативший
+                        до решающего момента получает -0.3 бала штраф независимо от победившей стороны.
+                    </li>
+                    <li>Обычный игрок, вскрывшийся шерифом и не откативший до решающего момента получает -0.3 бала штраф независимо
+                        от победившей стороны.</li>
+                    <li>У каждого игрока имеется 0.06 дополнительных балов. Эти балы игрок в праве поделить между игроками, которые
+                        по его мнение сыграли лучше остальных в этой игре (либо не отдавать никому). У ведущего имеется 0.1 бала
+                        (таким образом максимальный возможный доп. бал — 0.7). Балы могут делиться в любой пропорции до сотых
+                        (нельзя отдать 0.025). Бал в размере 0.01 ставить запрещено;
+                    </li>
+                </ul>
+            </p>
+        </div>
+
+        <div id="masters">
+            <p>
+                Наставником выбирается игрок, который способен рассказать интересные нестандартные вещи, показать
+                хорошую качественную игру и объяснить все промахи и ошибки игроков. Основное требование к наставнику  —
+                внимательность и спокойствие как за игровым столом так и вне его. Наставник играет весь игровой вечер
+                бесплатно.
+            </p>
+        </div>
+
+        <div id="newcomers">
+            <p>
+                Игроком "на-новенького" может стать абсолютно любой игрок, который любит играть в спортивную мафию и
+                готов развиваться и совершенствоваться в этой игре. Основное требование к игроку — понимание
+                основных принципов игры, стаж от года (возможны исключения) и неподдельное желание научиться
+                чему-то новому. Если вам скучно дома и вы просто решили расслабиться и поиграть в мафию — лучше выберите
+                другое место (благо клубов и фановых вечеров сейчас в избытке).
+            </p>
+        </div>
+
+        <div id="additional">
+            <p>
+                Правила игры на вечерах TG это действующие правила ФИИМ, так как основная идея проекта — подготовка
+                к турнирам, а большинство турниров находятся в сетке федерации. Стиль ведения — жесткий. На турнирах
+                никто не смотрит свой вы или нет, друг или незнакомец. Любой шепот, мычание или просто шутка в стол
+                (даже если смешная) — это получение игрового преимущества и тоже наказуемо фолом. Кроме того,
+                некоторые игроки намеренно набирают фолы, что-бы пропустить речь на следующий круг, по-этому угадывать,
+                было ли это специально или нет никто не будет.
+            </p>
+        </div>
+        <div id="end">
+            <p>
+                Tomas Gaming — это большой и дружный коллектив. Здесь недопустима агрессия и оскорбления. Всем нам есть
+                чему учится и каждый может совершать ошибки. Не забывайте об этом =)
+            </p>
+        </div>
     </div>
 </body>
 <footer>
