--- a/thomas-corner/content/pages/rating.html
+++ b/thomas-corner/content/pages/rating.html
@@ -13,7 +13,7 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="rating.html">Rating</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="about.html">About</a></li>
         </ul>
     </div>
     <div id="ratingOrdering" class="rating_ordering">
