--- a/thomas-corner/content/pages/about.html
+++ b/thomas-corner/content/pages/about.html
@@ -15,7 +15,7 @@
         </ul>
     </div>
     <div class="about">
-        <h2>About</h2>
+        <h2>About the project</h2>
         <p>
             Thomas Gaming — сообщество игроков в мафию, для которых спортивная мафия не пустой звук.
             Здесь каждый хочет научиться играть лучше, учавствовать в турнирах и побеждать.
@@ -90,5 +90,4 @@
     </div>
 </body>
 <footer>
-
 </footer>
