Rating 2.2 was updated

--- a/thomas-corner/content/pages/about.html
+++ b/thomas-corner/content/pages/about.html
@@ -46,7 +46,8 @@
                     <li>У каждого игрока имеется 0.06 дополнительных балов. Эти балы игрок в праве поделить между игроками, которые
                         по его мнение сыграли лучше остальных в этой игре (либо не отдавать никому). У ведущего имеется 0.1 бала
                         (таким образом максимальный возможный доп. бал — 0.7). Балы могут делиться в любой пропорции до сотых
-                        (нельзя отдать 0.025). Бал в размере 0.01 ставить запрещено;
+                        (нельзя отдать 0.025). Бал в размере 0.01 ставить запрещено. Игроку из проигравшей команды разрешено
+                        ставить не более 0.03;
                     </li>
                 </ul>
             </p>
