maf battle was addedd

--- a/x-maf_league/content/pages/schedule.html
+++ b/x-maf_league/content/pages/schedule.html
@@ -41,10 +41,16 @@
             </tr>
             <tr class=future>
                 <td>
-                    <a href="https://vk.com/antihypedbt" target="_blank">Antihype 2</a>
+                    <a href="https://vk.com/mafbattle2019" target="_blank">MAF BATTLE 2019</a>
                 </td>
-                <td>13.07.2019</td>
+                <td>01.06.2019</td>
             </tr>
+            <tr class=future>
+                    <td>
+                        <a href="https://vk.com/antihypedbt" target="_blank">Antihype 2</a>
+                    </td>
+                    <td>13.07.2019</td>
+                </tr>
             <tr class=future>
                 <td>
                     <a href="https://vk.com/wildhuntmafia" target="_blank">Wild Hunt: Sword of Destiny</a>
