--- a/thomas-corner/content/pages/home.html
+++ b/thomas-corner/content/pages/home.html
@@ -1,7 +1,12 @@
 <head>
     <title>Thomas Gaming</title>
     <link rel="shortcut icon" href="../../images/thomas-icon.png" type="image/x-icon" />
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="../../styles/main.css">
+    <link rel="stylesheet" href="../../styles/slider.css">
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <link rel="stylesheet prefetch" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+    <script src=https://unpkg.com/flickity@2.2.0/dist/flickity.pkgd.min.js></script>
 </head>
 <body>
     <div class="header">
@@ -14,9 +19,55 @@
         </ul>
     </div>
     <div class="home_wrapper">
-        <div class="home">
-           
+        <div class="slide--parent">
+            <div class="parent--el">
+                <div class="two--col">
+                    <div class="is-item has--img">
+                        <figure class="the-img">
+                            <img src="https://pp.userapi.com/c9545/v9545356/2acc/nGDLgIaRHEs.jpg" alt="">
+                        </figure>
+                    </div>
+                    <div class="is-item has--content">
+                        <div class="is-item--inner">
+                            <h1><span>ЗОДИАК</span></h1>
+                            <small>
+                                Лидер второго сезона
+                            </small>
+                            <hr>
+                            <ul></ul>
+                                <p><span>&#183;</span>Резидент клуба "Минск-Пассажирский"</p>
+                                <p><span>&#183;</span>Стаж игры: 5 лет</p>
+                                <p><span>&#183;</span>Результаты сезона: 4/4 (100%)</p>
+                                <p><span>&#183;</span>Статистика игр: 7/11 (66,7%)</p>
+                                <p><span>&#183;</span>Сильная карта: Кредитная</p>
+                                <br/>
+                                <p>" Братья так не играют!"</p>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="parent--el">
+                <div class="two--col">
+                    <div class="is-item has--img">
+                        <figure class="the-img">
+                            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/602471/lee-campbell-512447%20copy.jpg" alt="">
+                        </figure>
+                    </div>
+                    <div class="is-item has--content">
+                        <div class="is-item--inner">
+                            <h1><span>GRAB COFFEE</span></h1>
+                            <small>Coffee Makes Everything Better</small>
+                            <hr>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed quidem delectus laborum itaque alias, officiis laborum laborum illum voluptates est et voluptas?</p>
+                            <p>Sed quidem delectus laborum itaque laborum alias, officiis illum voluptates est et voluptas?</p>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed quidem delectus laborum itaque alias, officiis illum voluptates est et voluptas?</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+        <script type="text/javascript" src="../../scripts/slider.js"></script>
     </div>
 </body>
 <footer>
