quick fix rating

--- a/thomas-corner/content/pages/rating.html
+++ b/thomas-corner/content/pages/rating.html
@@ -11,7 +11,7 @@
     </div>
     <div class="sub_header">
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li><a href="rating.html">Rating</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
@@ -19,7 +19,7 @@
     <div id="ratingOrdering" class="rating_ordering">
         <ul>
             <li><p>&#183;</p></li>
-            <li><a id="season" class="active" href="#first_season">Season II</a></li>
+            <li><a id="season"  href="#second_season">Season II</a></li>
             <li><a id="alltime" href="#all_time">All time</a></li>
             <li><p>&#183;</p></li>
         </ul>
