home page v 1.0 was added

--- a/thomas-corner/content/pages/about.html
+++ b/thomas-corner/content/pages/about.html
@@ -2,20 +2,19 @@
     <title>Thomas Gaming</title>
     <link rel="shortcut icon" href="../../images/thomas-icon.png" type="image/x-icon" />
     <link rel="stylesheet" href="../../styles/main.css">
-    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 </head>
 <body>
     <div class="header">
     </div>
     <div class="sub_header">
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li><a href="rating.html">Rating</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
     </div>
     <div class="about">
-        <h2>About the project</h2>
+        <h2><span>&#183;</span>About the project<span>&#183;</span></h2>
         <p>
             Thomas Gaming — сообщество игроков в мафию, для которых спортивная мафия не пустой звук.
             Здесь каждый хочет научиться играть лучше, учавствовать в турнирах и побеждать.
