--- a/thomas-corner/content/pages/home.html
+++ b/thomas-corner/content/pages/home.html
@@ -7,6 +7,7 @@
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <link rel="stylesheet prefetch" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <script src=https://unpkg.com/flickity@2.2.0/dist/flickity.pkgd.min.js></script>
+    <script type="text/javascript" src="../../scripts/fame-loader.js"></script>
 </head>
 <body>
     <div class="header">
@@ -19,12 +20,13 @@
         </ul>
     </div>
     <div class="home_wrapper">
+        <h1 class="home_title"><span>&#183;</span>Hall of Fame<span>&#183;</span></h1>
         <div class="slide--parent">
             <div class="parent--el">
                 <div class="two--col">
                     <div class="is-item has--img">
                         <figure class="the-img">
-                            <img src="https://pp.userapi.com/c9545/v9545356/2acc/nGDLgIaRHEs.jpg" alt="">
+                            <img src="../../images/players/zodiak.jpg" />
                         </figure>
                     </div>
                     <div class="is-item has--content">
@@ -35,13 +37,13 @@
                             </small>
                             <hr>
                             <ul></ul>
-                                <p><span>&#183;</span>Резидент клуба "Минск-Пассажирский"</p>
+                                <p><span>&#183;</span>Главарь банды "Минск-Пассажирский"</p>
                                 <p><span>&#183;</span>Стаж игры: 5 лет</p>
-                                <p><span>&#183;</span>Результаты сезона: 4/4 (100%)</p>
-                                <p><span>&#183;</span>Статистика игр: 7/11 (66,7%)</p>
-                                <p><span>&#183;</span>Сильная карта: Кредитная</p>
+                                <p><span>&#183;</span>Результаты сезона: 6/8 (75%)</p>
+                                <p><span>&#183;</span>Статистика игр: 9/15 (61,7%)</p>
+                                <p><span>&#183;</span>Сильная карта: Красная</p>
                                 <br/>
-                                <p>" Братья так не играют!"</p>
+                                <p>- "Братья так не играют!"</p>
                             </ul>
                         </div>
                     </div>
@@ -51,19 +53,56 @@
                 <div class="two--col">
                     <div class="is-item has--img">
                         <figure class="the-img">
-                            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/602471/lee-campbell-512447%20copy.jpg" alt="">
+                            <img src="../../images/players/gadjet.jpg" />
                         </figure>
                     </div>
                     <div class="is-item has--content">
-                        <div class="is-item--inner">
-                            <h1><span>GRAB COFFEE</span></h1>
-                            <small>Coffee Makes Everything Better</small>
-                            <hr>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed quidem delectus laborum itaque alias, officiis laborum laborum illum voluptates est et voluptas?</p>
-                            <p>Sed quidem delectus laborum itaque laborum alias, officiis illum voluptates est et voluptas?</p>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed quidem delectus laborum itaque alias, officiis illum voluptates est et voluptas?</p>
+                            <div class="is-item--inner">
+                                <h1><span>Гаджет</span></h1>
+                                <small>
+                                    Лидер рейтинга
+                                </small>
+                                <hr>
+                                <ul></ul>
+                                    <p><span>&#183;</span>Молодой представитель клуба "Red Black Family"</p>
+                                    <p><span>&#183;</span>Стаж игры: 1.5 года</p>
+                                    <p><span>&#183;</span>Статистка игр: 7/10 (70%)</p>
+                                    <p><span>&#183;</span>Дополнительные балы: 0.9</p>
+                                    <p><span>&#183;</span>Сильная карта: Черная</p>
+                                    <br/>
+                                    <p>- "Канкистадоры!"</p>
+                                </ul>
+                            </div>
                         </div>
+                </div>
+            </div>
+            <div class="parent--el">
+                <div class="two--col">
+                    <div class="is-item has--img">
+                        <figure class="the-img">
+                            <img src="../../images/players/leksa.jpg" />
+                        </figure>
                     </div>
+                    <div class="is-item has--content">
+                            <div class="is-item--inner">
+                                <h1><span>Лекса</span></h1>
+                                <small>
+                                    Победитель первого сезона
+                                </small>
+                                <hr>
+                                <ul></ul>
+                                    <p><span>&#183;</span>Представитель клуба "Mafia Vero"</p>
+                                    <p><span>&#183;</span>Стаж игры: 2 года</p>
+                                    <p><span>&#183;</span>Статистка игр: 16/24 (65%)</p>
+                                    <p><span>&#183;</span>Черная карта: 5/5 (100%)</p>
+                                    <p><span>&#183;</span>Сильная карта: Черная</p>
+                                    <br/>
+                                    <p>- "Thomas Gaming - это место, где каждый серьезно относится к игре. 
+                                        Возможность выслушать конструктивный разбор ошибок, 
+                                        получить дельный совет и опыт от достойных игроков."</p>
+                                </ul>
+                            </div>
+                        </div>
                 </div>
             </div>
         </div>
