x-maf tournaments is auto up-to-dated now

--- a/x-maf_league/content/pages/schedule.html
+++ b/x-maf_league/content/pages/schedule.html
@@ -26,36 +26,36 @@
             </ul>
         </div>
         <table cellpadding="10px">
-            <tr class="old_date">
+            <tr>
                 <td>
                     <a href="https://vk.com/frozenthronemafia" target="_blank">Frozen Throne Mafia Tournament</a>
                     <!--<<p class="touranment_place">1 место - г-н Архи, 2 место - г-жа Рейновен, 3 место - г-жа Крис</p> -->
                 </td>
-                <td>26.01.2019</td>
+                <td class="date">26.01.2019</td>
             </tr>
-            <tr class="old_date">
+            <tr>
                 <td>
                     <a href="https://vk.com/terramafiashiveringisles" target="_blank">Terra Mafia: Shivering Isles</a>
                 </td>
-                <td>06.04.2019</td>
+                <td class="date">06.04.2019</td>
             </tr>
-            <tr class=future>
+            <tr>
                 <td>
                     <a href="https://vk.com/mafbattle2019" target="_blank">MAF BATTLE 2019</a>
                 </td>
-                <td>01.06.2019</td>
+                <td class="date">01.06.2019</td>
             </tr>
-            <tr class=future>
-                    <td>
-                        <a href="https://vk.com/antihypedbt" target="_blank">Antihype 2</a>
-                    </td>
-                    <td>13.07.2019</td>
-                </tr>
-            <tr class=future>
+            <tr>
+                <td>
+                    <a href="https://vk.com/antihypedbt" target="_blank">Antihype 2</a>
+                </td>
+                <td class="date">13.07.2019</td>
+            </tr>
+            <tr>
                 <td>
                     <a href="https://vk.com/wildhuntmafia" target="_blank">Wild Hunt: Sword of Destiny</a>
                 </td>
-                <td>???</td>
+                <td class="date">???</td>
             </tr>
         </table>
     </div>
