[TG] typing was fixed

--- a/thomas-corner/content/pages/about.html
+++ b/thomas-corner/content/pages/about.html
@@ -84,7 +84,7 @@
         <div id="end">
             <p>
                 Tomas Gaming — это большой и дружный коллектив. Здесь недопустима агрессия и оскорбления. Всем нам есть
-                чему учится и каждый может совершать ошибки. Не забывайте об этом =)
+                чему учиться и каждый может совершать ошибки. Не забывайте об этом =)
             </p>
         </div>
     </div>
