[XML] quick fix for schedule flickering

--- a/x-maf_league/content/pages/schedule.html
+++ b/x-maf_league/content/pages/schedule.html
@@ -25,7 +25,7 @@
                 <li><a id="overpast_tournaments" href="#overpast">Overpast</a></li>
             </ul>
         </div>
-        <table cellpadding="10px">
+        <table class="tournaments_table" cellpadding="10px">
             <tr>
                 <td>
                     <a href="https://vk.com/frozenthronemafia" target="_blank">Frozen Throne Mafia Tournament</a>
