--- a/x-maf_league/content/pages/rating.html
+++ b/x-maf_league/content/pages/rating.html
@@ -16,7 +16,7 @@
         </ul>
     </div>
     <div class="rating_content">
-            <h2>Top 18</h2>
+            <h2>Top 19</h2>
             <table>
                 <tr>
                     <td>1</td>
@@ -125,6 +125,12 @@
                     <td><img src="../../images/users/blain.jpg"/></td>
                     <td>Блэйн</td>
                     <td>7,4</td>
+                </tr>
+                <tr>
+                    <td>19</td>
+                    <td><img src="../../images/users/iskra.jpg"/></td>
+                    <td>Искра</td>
+                    <td>7</td>
                 </tr>
             </table>
             <!-- <div class="full_table">
