--- a/x-maf_league/content/pages/full-table_rating.html
+++ b/x-maf_league/content/pages/full-table_rating.html
@@ -2,6 +2,8 @@
     <title>X-maf League</title>
     <link rel="shortcut icon" href="../../images/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="../../styles/main.css">
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="../../scripts/full-table.js"></script>
 </head>
 <body>
     <div class="header">
