[TG] all stars game + ev. left + new lead season

--- a/thomas-corner/content/pages/home.html
+++ b/thomas-corner/content/pages/home.html
@@ -26,24 +26,24 @@
                 <div class="two--col">
                     <div class="is-item has--img">
                         <figure class="the-img">
-                            <img src="../../images/players/zodiak.jpg" />
+                            <img src="../../images/players/alisa.jpg" />
                         </figure>
                     </div>
                     <div class="is-item has--content">
                         <div class="is-item--inner">
-                            <h1><span>ЗОДИАК</span></h1>
+                            <h1><span>Алиса</span></h1>
                             <small>
                                 Лидер второго сезона
                             </small>
                             <hr>
                             <ul></ul>
-                                <p><span>&#183;</span>Главарь банды "Минск-Пассажирский"</p>
-                                <p><span>&#183;</span>Стаж игры: 5 лет</p>
-                                <p><span>&#183;</span>Результаты сезона: 6/8 (75%)</p>
-                                <p><span>&#183;</span>Статистика игр: 9/15 (61,7%)</p>
+                                <p><span>&#183;</span>Юное дарование клуба "Крестный отец"</p>
+                                <p><span>&#183;</span>Стаж игры: ~ 2 года</p>
+                                <p><span>&#183;</span>Результаты сезона: 12/18 (68%)</p>
+                                <p><span>&#183;</span>Статистика игр: 11/19 (59%)</p>
                                 <p><span>&#183;</span>Сильная карта: Красная</p>
                                 <br/>
-                                <p>- "Братья так не играют!"</p>
+                                <p>- "Паровозик для меня семья!"</p>
                             </ul>
                         </div>
                     </div>
