--- a/thomas-corner/content/pages/rating.html
+++ b/thomas-corner/content/pages/rating.html
@@ -24,6 +24,7 @@
             <li><p>&#183;</p></li>
         </ul>
     </div>
+    <p class="season_left">Evenings left: </span>2</span></p>
     <div id="rating_content" class="content">
     </div>
 </body>
