[TG] player alisa imalge was added

--- a/thomas-corner/content/pages/home.html
+++ b/thomas-corner/content/pages/home.html
@@ -26,7 +26,7 @@
                 <div class="two--col">
                     <div class="is-item has--img">
                         <figure class="the-img">
-                            <img src="../../images/players/alisa.jpg" />
+                            <img src="../../images/players/alisa.jpg?q" />
                         </figure>
                     </div>
                     <div class="is-item has--content">
