--- a/timetable/antihype.html
+++ b/timetable/antihype.html
@@ -7,61 +7,83 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
-    <h1>Antihype Timetable</h1>
+    <h1>Antihype 2</h1>
 
-    <div id="round1">
-        <p>Round 1</p>
-        <div id='table1'></div>
-        <div id='table2'></div>
+    <div id="ratingOrdering" class="rating_ordering">
+        <ul>
+            <li><a id="timetable_id" class="active" href="#timetable">Timetable</a></li>
+            <li><a id="table_id" href="#table">Tables</a></li>
+        </ul>
     </div>
-    <div id="round2">
-        <p>Round 2</p>
-        <div id='table1'></div>
-        <div id='table2'></div>
-    </div>
-    <div id="round3">
-        <p>Round 3</p>
-        <div id='table1'></div>
-        <div id='table2'></div>
-    </div>
-    <div id="round4">
-        <p>Round 4</p>
-        <div id='table1'></div>
-        <div id='table2'></div>
-    </div>
-    <div id="round5" class="popup">
-        <p>Round 5</p>
-        <div id='table1'></div>
-        <div id='table2'></div>
-    </div>
-    <div id="round6">
-        <p>Round 6</p>
-        <div id='table1'></div>
-        <div id='table2'></div>
-    </div>
+    <div id="content">
+        <div id="timetable_wrapper">
+            <div id="round1">
+                <p>Round 1</p>
+                <div id='table1'></div>
+                <div id='table2'></div>
+            </div>
+            <div id="round2">
+                <p>Round 2</p>
+                <div id='table1'></div>
+                <div id='table2'></div>
+            </div>
+            <div id="round3">
+                <p>Round 3</p>
+                <div id='table1'></div>
+                <div id='table2'></div>
+            </div>
+            <div id="round4">
+                <p>Round 4</p>
+                <div id='table1'></div>
+                <div id='table2'></div>
+            </div>
+            <div id="round5" class="popup">
+                <p>Round 5</p>
+                <div id='table1'></div>
+                <div id='table2'></div>
+            </div>
+            <div id="round6">
+                <p>Round 6</p>
+                <div id='table1'></div>
+                <div id='table2'></div>
+            </div>
 
-    <div id="semi1">
-        <p>Semi-final 1</p>
-        <div id='table1'></div>
-        <div id='table2'></div>
-    </div>
-    <div id="semi2">
-        <p>Semi-final 2</p>
-        <div id='table1'></div>
-        <div id='table2'></div>
-    </div>
-    <div id="semi3">
-        <p>Semi-final 3</p>
-        <div id='table1'></div>
-        <div id='table2'></div>
-    </div>
+            <div id="semi1">
+                <p>Semi-final 1</p>
+                <div id='table1'></div>
+                <div id='table2'></div>
+            </div>
+            <div id="semi2">
+                <p>Semi-final 2</p>
+                <div id='table1'></div>
+                <div id='table2'></div>
+            </div>
+            <div id="semi3">
+                <p>Semi-final 3</p>
+                <div id='table1'></div>
+                <div id='table2'></div>
+            </div>
 
-    <div id="final1">
-        <p>Final Game 1</p>
-        <div id='table1'></div>
-    </div>
-    <div id="final2">
-        <p>Final Game 2</p>
-        <div id='table1'></div>
+            <div id="final1">
+                <p>Final Game 1</p>
+                <div id='table1'></div>
+            </div>
+            <div id="final2">
+                <p>Final Game 2</p>
+                <div id='table1'></div>
+            </div>
+        </div>
+
+        <div id="table_wrapper" class="ng-hidden">
+            <div>
+                <p>Groups</p>
+                <div id='group_a'></div>
+                <div id='group_b'></div>
+            </div>
+            <div>
+                <p>All stars</p>
+                <div id='all_stars'></div>
+            </div>
+        </div>
     </div>
 <body>
