--- a/x-maf_league/content/pages/rating.html
+++ b/x-maf_league/content/pages/rating.html
@@ -12,17 +12,17 @@
             <li><a href="#">Home</a></li>
             <li><a href="rating.html">Rating</a></li>
             <li><a href="schedule.html">Schedule</a></li>
-            <li><a href="#">Scoring</a></li>
+            <li><a href="scoring.html">Scoring</a></li>
         </ul>
     </div>
     <div class="rating_content">
-            <h2>Top 19</h2>
+            <h2>Top 21</h2>
             <table>
                 <tr>
                     <td>1</td>
                     <td><img src="../../images/users/arhi.jpg"/></td>
                     <td>Архи</td>
-                    <td>30,7</td>
+                    <td>33,7</td>
                 </tr>
                 <tr>
                     <td>2</td>
@@ -38,103 +38,115 @@
                 </tr>
                 <tr>
                     <td>4</td>
+                    <td><img src="../../images/users/kinder.jpg"/></td>
+                    <td>Киндер</td>
+                    <td>19,2</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td><img src="../../images/users/zodiak.jpg"/></td>
+                    <td>Зодиак</td>
+                    <td>19</td>
+                </tr>
+                <tr>
+                    <td>6</td>
                     <td><img src="../../images/users/plesen.jpg"/></td>
                     <td>Плесень</td>
                     <td>18</td>
                 </tr>
                 <tr>
-                    <td>5</td>
+                    <td>7</td>
                     <td><img src="../../images/users/reinoven.jpg"/></td>
                     <td>Рейновен</td>
                     <td>17,6</td>
                 </tr>
                 <tr>
-                    <td>6</td>
-                    <td><img src="../../images/users/kinder.jpg"/></td>
-                    <td>Киндер</td>
-                    <td>17,2</td>
-                </tr>
-                <tr>
-                    <td>7</td>
+                    <td>8</td>
                     <td><img src="../../images/users/yesterday.jpg"/></td>
                     <td>Yesterday</td>
+                    <td>17</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td><img src="../../images/users/moriarty.jpg"/></td>
+                    <td>Мориарти</td>
                     <td>15</td>
                 </tr>
                 <tr>
-                    <td>8</td>
+                    <td>10</td>
                     <td><img src="../../images/users/krista.jpg"/></td>
                     <td>Криста</td>
                     <td>14,8</td>
                 </tr>
                 <tr>
-                    <td>9</td>
+                    <td>11</td>
+                    <td><img src="../../images/users/aleksa.jpg"/></td>
+                    <td>Алекси</td>
+                    <td>14</td>
+                </tr>
+                <tr>
+                    <td>12</td>
                     <td><img src="../../images/users/vb.jpg"/></td>
                     <td>Валерун-Балерун</td>
                     <td>13,7</td>
                 </tr>
                 <tr>
-                    <td>10</td>
-                    <td><img src="../../images/users/moriarty.jpg"/></td>
-                    <td>Мориарти</td>
+                    <td>13</td>
+                    <td><img src="../../images/users/iskra.jpg"/></td>
+                    <td>Искра</td>
                     <td>13</td>
                 </tr>
                 <tr>
+                    <td>14</td>
+                    <td><img src="../../images/users/jnec.jpg"/></td>
+                    <td>Жнец</td>
                     <td>11</td>
-                    <td><img src="../../images/users/aleksa.jpg"/></td>
-                    <td>Алекси</td>
-                    <td>12</td>
                 </tr>
                 <tr>
-                    <td>12</td>
+                    <td>15</td>
+                    <td><img src="../../images/users/freddy.jpg"/></td>
+                    <td>Freddy Krueger</td>
+                    <td>10,8</td>
+                </tr>
+                <tr>
+                    <td>16</td>
                     <td><img src="../../images/users/kris.jpg"/></td>
                     <td>Крис</td>
                     <td>9</td>
                 </tr>
                 <tr>
-                    <td>13</td>
+                    <td>17</td>
                     <td><img src="../../images/users/cat.jpg"/></td>
                     <td>Кошка</td>
                     <td>9</td>
                 </tr>
                 <tr>
-                    <td>14</td>
-                    <td><img src="../../images/users/zodiak.jpg"/></td>
-                    <td>Зодиак</td>
-                    <td>9</td>
-                </tr>
-                <tr>
-                    <td>15</td>
+                    <td>18</td>
                     <td><img src="../../images/users/alisa.jpg"/></td>
                     <td>Алиса</td>
                     <td>9</td>
                 </tr>
                 <tr>
-                    <td>16</td>
+                    <td>19</td>
                     <td><img src="../../images/users/napoleon.jpg"/></td>
                     <td>Наполеон</td>
                     <td>9</td>
                 </tr>
                 <tr>
-                    <td>17</td>
-                    <td><img src="../../images/users/freddy.jpg"/></td>
-                    <td>Freddy Krueger</td>
-                    <td>8,8</td>
+                    <td>20</td>
+                    <td><img src="../../images/users/gadjet.jpg"/></td>
+                    <td>Гаджет</td>
+                    <td>8</td>
                 </tr>
                 <tr>
-                    <td>18</td>
-                    <td><img src="../../images/users/blain.jpg"/></td>
-                    <td>Блэйн</td>
-                    <td>7,4</td>
-                </tr>
-                <tr>
-                    <td>19</td>
-                    <td><img src="../../images/users/iskra.jpg"/></td>
-                    <td>Искра</td>
-                    <td>7</td>
+                    <td>21</td>
+                    <td><img src="../../images/users/prodajnic.jpg"/></td>
+                    <td>Продажник</td>
+                    <td>8</td>
                 </tr>
             </table>
             <!-- <div class="full_table">
-                <a href="full-table_rating.html">See all details</a>
+                
             </div> -->
     </div>
 </body>
