[XML] green arroy was added

--- a/x-maf_league/content/pages/rating.html
+++ b/x-maf_league/content/pages/rating.html
@@ -22,7 +22,7 @@
                     <td>1</td>
                     <td><img src="../../images/users/arhi.jpg"/></td>
                     <td>Архи</td>
-                    <td>33,7</td>
+                    <td>33,7<span><img src="../../images/green_up.png">3</span></td>
                 </tr>
                 <tr>
                     <td>2</td>
@@ -40,13 +40,13 @@
                     <td>4</td>
                     <td><img src="../../images/users/kinder.jpg"/></td>
                     <td>Киндер</td>
-                    <td>19,2</td>
+                    <td>19,2<span><img src="../../images/green_up.png">2</span></td>
                 </tr>
                 <tr>
                     <td>5</td>
                     <td><img src="../../images/users/zodiak.jpg"/></td>
                     <td>Зодиак</td>
-                    <td>19</td>
+                    <td>19<span><img src="../../images/green_up.png">10</span></td>
                 </tr>
                 <tr>
                     <td>6</td>
@@ -64,13 +64,13 @@
                     <td>8</td>
                     <td><img src="../../images/users/yesterday.jpg"/></td>
                     <td>Yesterday</td>
-                    <td>17</td>
+                    <td>17<span><img src="../../images/green_up.png">2</span></td>
                 </tr>
                 <tr>
                     <td>9</td>
                     <td><img src="../../images/users/moriarty.jpg"/></td>
                     <td>Мориарти</td>
-                    <td>15</td>
+                    <td>15<span><img src="../../images/green_up.png">2</span></td>
                 </tr>
                 <tr>
                     <td>10</td>
@@ -82,7 +82,7 @@
                     <td>11</td>
                     <td><img src="../../images/users/aleksa.jpg"/></td>
                     <td>Алекси</td>
-                    <td>14</td>
+                    <td>14<span><img src="../../images/green_up.png">2</span></td>
                 </tr>
                 <tr>
                     <td>12</td>
@@ -94,19 +94,19 @@
                     <td>13</td>
                     <td><img src="../../images/users/iskra.jpg"/></td>
                     <td>Искра</td>
-                    <td>13</td>
+                    <td>13<span><img src="../../images/green_up.png">6</span></td>
                 </tr>
                 <tr>
                     <td>14</td>
                     <td><img src="../../images/users/jnec.jpg"/></td>
                     <td>Жнец</td>
-                    <td>11</td>
+                    <td>11<span><img src="../../images/green_up.png">5</span></td>
                 </tr>
                 <tr>
                     <td>15</td>
                     <td><img src="../../images/users/freddy.jpg"/></td>
                     <td>Freddy Krueger</td>
-                    <td>10,8</td>
+                    <td>10,8<span><img src="../../images/green_up.png">2</span></td>
                 </tr>
                 <tr>
                     <td>16</td>
@@ -136,13 +136,13 @@
                     <td>20</td>
                     <td><img src="../../images/users/gadjet.jpg"/></td>
                     <td>Гаджет</td>
-                    <td>8</td>
+                    <td>8<span><img src="../../images/green_up.png">2</span></td>
                 </tr>
                 <tr>
                     <td>21</td>
                     <td><img src="../../images/users/prodajnic.jpg"/></td>
                     <td>Продажник</td>
-                    <td>8</td>
+                    <td>8<span><img src="../../images/green_up.png">8</span></td>
                 </tr>
             </table>
             <!-- <div class="full_table">
