--- a/x-maf_league/content/pages/rating.html
+++ b/x-maf_league/content/pages/rating.html
@@ -12,7 +12,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="rating.html">Rating</a></li>
             <li><a href="schedule.html">Schedule</a></li>
-            <li><a href="scoring.html">Scoring</a></li>
+            <li><a href="#">Scoring</a></li>
         </ul>
     </div>
     <div class="rating_content">
