--- a/thomas-corner/content/pages/rating.html
+++ b/thomas-corner/content/pages/rating.html
@@ -14,6 +14,7 @@
             <li><a href="home.html">Home</a></li>
             <li><a href="rating.html">Rating</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="play_with.html">Play with!</a></li>
         </ul>
     </div>
     <div id="ratingOrdering" class="rating_ordering">
@@ -24,7 +25,7 @@
             <li><p>&#183;</p></li>
         </ul>
     </div>
-    <p class="season_left">Evenings left: </span>2</span></p>
+    <p class="season_left">Evenings left: </span>1</span></p>
     <div id="rating_content" class="content">
     </div>
 </body>
