[XML] new tournament was added

--- a/x-maf_league/content/pages/schedule.html
+++ b/x-maf_league/content/pages/schedule.html
@@ -25,6 +25,25 @@
                 <li><a id="overpast_tournaments" href="#overpast">Overpast</a></li>
             </ul>
         </div>
+        <div class="tournament" style="border-color: white;">
+            <div class="tournament_image_wrapper"
+                    style="background-image: url(../../images/index.png)">
+            </div>
+            <div class="tournament_metadata">
+                <h3><a href="https://vk.com/familychallengeminsk" target="_blank">Family Challenge</a></h3>
+                <p>
+                        Представляем вашему вниманию долгожданный клубный турнир Family Challenge Minsk!
+                        <br/><br/>
+                        🔥 10 отборочных этапов, по 7 игр. Победитель проходит в финал
+                        <br/><br/>
+                        🔥 14/16 финальных игр
+                        <br/><br/>
+                        🔥Большой призовой фонд, а также сюрпризы и подарки финалистам
+                        <br/>
+                </p>
+                <p class="tournament_date">27.07.2019</p>
+            </div>
+        </div>
         <div class="tournament" style="border-color:deepskyblue;">
             <div class="tournament_image_wrapper"
                     style="background-image: url(https://gamepedia.cursecdn.com/wowpedia/4/47/Knights_of_the_Frozen_Throne.png)">
