--- a/x-maf_league/content/pages/schedule.html
+++ b/x-maf_league/content/pages/schedule.html
@@ -41,7 +41,7 @@
                         🔥Большой призовой фонд, а также сюрпризы и подарки финалистам
                         <br/>
                 </p>
-                <p class="tournament_date">27.07.2019</p>
+                <p class="tournament_date">10.08.2019</p>
             </div>
         </div>
         <div class="tournament" style="border-color:deepskyblue;">
@@ -111,7 +111,7 @@
         </div>
         <div class="tournament" style="border-color:darkorange;">
             <div class="tournament_image_wrapper"
-                    style="background-image: url(https://sun1-22.userapi.com/c849328/v849328198/1ce0a6/panhknqkO70.jpg)">
+                    style="background-image: url(../../images/24.png)">
             </div>
             <div class="tournament_metadata">
                 <h3><a href="https://vk.com/marafonminsk24" target="_blank">Marathon 24</a></h3>
