[TG] 2 season final

--- a/thomas-corner/content/pages/rating.html
+++ b/thomas-corner/content/pages/rating.html
@@ -25,7 +25,7 @@
             <li><p>&#183;</p></li>
         </ul>
     </div>
-    <p class="season_left">Evenings left: </span>1</span></p>
+    <!--<p class="season_left">Evenings left: </span>1</span></p>-->
     <div id="rating_content" class="content">
     </div>
 </body>
