[TG] Season 2 all stars final

--- a/thomas-corner/content/pages/home.html
+++ b/thomas-corner/content/pages/home.html
@@ -17,6 +17,7 @@
             <li><a href="home.html">Home</a></li>
             <li><a href="rating.html">Rating</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="#">Play with!</a></li>
         </ul>
     </div>
     <div class="home_wrapper">
@@ -33,14 +34,14 @@
                         <div class="is-item--inner">
                             <h1><span>Алиса</span></h1>
                             <small>
-                                Лидер второго сезона
+                                Победитель второго сезона
                             </small>
                             <hr>
                             <ul></ul>
                                 <p><span>&#183;</span>Юное дарование клуба "Крестный отец"</p>
                                 <p><span>&#183;</span>Стаж игры: ~ 2 года</p>
                                 <p><span>&#183;</span>Результаты сезона: 12/18 (68%)</p>
-                                <p><span>&#183;</span>Статистика игр: 11/19 (59%)</p>
+                                <p><span>&#183;</span>Статистика игр: 14/22 (59%)</p>
                                 <p><span>&#183;</span>Сильная карта: Красная</p>
                                 <br/>
                                 <p>- "Паровозик для меня семья!"</p>
