--- a/thomas-corner/content/pages/about.html
+++ b/thomas-corner/content/pages/about.html
@@ -11,6 +11,7 @@
             <li><a href="home.html">Home</a></li>
             <li><a href="rating.html">Rating</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="#">Play with!</a></li>
         </ul>
     </div>
     <div class="about">
@@ -83,7 +84,7 @@
         </div>
         <div id="end">
             <p>
-                Tomas Gaming — это большой и дружный коллектив. Здесь недопустима агрессия и оскорбления. Всем нам есть
+                Thomas Gaming — это большой и дружный коллектив. Здесь недопустима агрессия и оскорбления. Всем нам есть
                 чему учиться и каждый может совершать ошибки. Не забывайте об этом =)
             </p>
         </div>
