[M24] Some errors were fixed

--- a/timetable/marathon24.html
+++ b/timetable/marathon24.html
@@ -52,7 +52,7 @@
                         <tr><td>7</td><td>Андерсен</td><td>Маф</td><td>0</td><td></td><td></td></tr>
                         <tr><td>8</td><td>КО</td><td>Мир</td><td>1</td><td></td><td></td></tr>
                         <tr><td>9</td><td>Флэш</td><td>Мир</td><td>1</td><td>-0,2</td><td></td></tr>
-                        <tr><td>10</td><td>Артик</td><td>Шер</td><td>1</td><td></td><td>0,25</td></tr>
+                        <tr><td>10</td><td>Артик</td><td>Шер</td><td>1</td><td></td><td></td></tr>
                     </table>
                     <p class="total">Победа: Мирные, ПУ: 10(Артик), ЛХ: 3,4,6</p>
 
@@ -179,7 +179,7 @@
                         <tr><td>6</td><td>Yesterday</td><td>Мир</td><td>1</td><td>0,2</td><td></td></tr>
                         <tr><td>7</td><td>КО</td><td>Дон</td><td>0</td><td></td><td></td></tr>
                         <tr><td>8</td><td>Мортал</td><td>Маф</td><td>0</td><td></td><td></td></tr>
-                        <tr><td>9</td><td>Bon</td><td>Мир</td><td>1</td><td></td><td>0,25</td></tr>
+                        <tr><td>9</td><td>Bon</td><td>Мир</td><td>1</td><td></td><td></td></tr>
                         <tr><td>10</td><td>Флэщ</td><td>Шер</td><td>1</td><td>0,4</td><td></td></tr>
                     </table>
                     <p class="total">Победа: Мирные, ПУ: 9(Bon), ЛХ: 3,7,8</p>
