[XML] image was added into table

--- a/x-maf_league/content/pages/full_rating.html
+++ b/x-maf_league/content/pages/full_rating.html
@@ -17,6 +17,6 @@
             <li><a href="#">Scoring</a></li>
         </ul>
     </div>
-    <div class="full_rating_content"></div>
+    <div class="rating_content"></div>
 </body>
     
