[XML] test json, new tournaments, sorting, ordering

--- a/x-maf_league/content/pages/schedule.1.html
+++ b/x-maf_league/content/pages/schedule.1.html
@@ -18,7 +18,15 @@
         </ul>
     </div>
     <div class="content schedule_content">
-        
+        <h2>Tournaments</h2>
+        <div id="sceduleOrdering" class="scedule_ordering">
+            <ul>
+                <li><a id="planned_tournaments" class="active" href="#planned">Planned</a></li>
+                <li><a id="overpast_tournaments" href="#overpast">Overpast</a></li>
+            </ul>
+        </div>
+        <div id="schedule_content">
+        </div>
     </div>
 </body>
 <footer>
