--- a/x-maf_league/content/pages/schedule.html
+++ b/x-maf_league/content/pages/schedule.html
@@ -27,7 +27,7 @@
         </div>
         <div class="tournament" style="border-color: white;">
             <div class="tournament_image_wrapper"
-                    style="background-image: url(../../images/index.png)">
+                    style="background-image: url(../../images/family.png)">
             </div>
             <div class="tournament_metadata">
                 <h3><a href="https://vk.com/familychallengeminsk" target="_blank">Family Challenge</a></h3>
