[XML] initial active tab's class was removed

--- a/x-maf_league/content/pages/schedule.1.html
+++ b/x-maf_league/content/pages/schedule.1.html
@@ -21,7 +21,7 @@
         <h2>Tournaments</h2>
         <div id="sceduleOrdering" class="scedule_ordering">
             <ul>
-                <li><a id="planned_tournaments" class="active" href="#planned">Planned</a></li>
+                <li><a id="planned_tournaments"  href="#planned">Planned</a></li>
                 <li><a id="overpast_tournaments" href="#overpast">Overpast</a></li>
             </ul>
         </div>
