[TG] Striming test vol.2

--- a/thomas-corner/content/pages/play_with.html
+++ b/thomas-corner/content/pages/play_with.html
@@ -14,7 +14,9 @@
             <li><a href="play_with.html">Play with!</a></li>
         </ul>
     </div>
+    <div class="striming_wrapper">
+    <h2>Watch & Play</h2>
     <iframe src="//vk.com/video_ext.php?oid=-139893597&id=456239019&hash=6586fffd8c8cf404&hd=2" width="853" height="480" frameborder="0" allowfullscreen></iframe>
+    </div>
 </div>
 </body>
-    
