[XML] Stream test vol.2

--- a/x-maf_league/content/pages/stream.html
+++ b/x-maf_league/content/pages/stream.html
@@ -17,7 +17,7 @@
             <li><a href="#">Stream</a></li>
         </ul>
     </div>
-    <div class="content schedule_content">
+    <div class="content stream_content">
         <h2>Mafia Live</h2>
         <iframe src="//vk.com/video_ext.php?oid=-95929197&id=456239128&hash=e9ccfc45b3fb60b8&hd=3"
         width="1280" height="720" frameborder="0" allowfullscreen></iframe>
