[XML] Stream test vol.5

--- a/x-maf_league/content/pages/stream.html
+++ b/x-maf_league/content/pages/stream.html
@@ -19,6 +19,7 @@
     </div>
     <div class="content stream_content">
         <h2>Mafia Live</h2>
+        <img src="https://cdn1.iconfinder.com/data/icons/fs-icons-ubuntu-by-franksouza-/512/video-webm.png" />
         <iframe src="//vk.com/video_ext.php?oid=-95929197&id=456239128&hash=e9ccfc45b3fb60b8&hd=3"
         width="850" height="480" frameborder="0" allowfullscreen></iframe>
     </div>
