[TG] new season updates

--- a/thomas-corner/content/pages/about.html
+++ b/thomas-corner/content/pages/about.html
@@ -10,8 +10,8 @@
         <ul>
             <li><a href="home.html">Home</a></li>
             <li><a href="rating.html">Rating</a></li>
+            <li><a href="stream.html">Stream<img src="http://icons.iconarchive.com/icons/pixelresort/peely/256/video-icon.png"></a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#">Play with!</a></li>
         </ul>
     </div>
     <div class="about">
@@ -22,17 +22,17 @@
         </p>
 
         <div id="idea">
-            <p>
+            <p class="up_info">
                 Основная идея проекта — собираться и играть игры в условиях, максимально приближенных к
                 турнирным. Стол собирается 1 раз в неделю (в основном в пятницу), играется 4-5 игр одним и тем же
                 составом. После каждой игры в обязательном порядке (в устной или письменной форме) проводится рефлексия
-                и расстановка дополнительных балов. В состав вечера входят от 8 постоянных игроков TG, 1 наставник
+                и расстановка дополнительных балов. В состав вечера входят от 8 постоянных игроков TG, 2 наставника
                 и 1 игрок "на новенького" — кандидат в постоянный состав проекта.
             </p>
         </div>
 
         <div id="scoring">
-            <p>
+            <p class="up_info">
                 Система очков проекта построена таким образом, чтобы игроки могли получать дополнительные балы за
                 хорошую игру или напротив, получать штрафные балы за плохую. За основу была взята система ФИИМ с некоторыми
                 изменениями:
