--- a/thomas-corner/content/pages/rating.html
+++ b/thomas-corner/content/pages/rating.html
@@ -13,19 +13,19 @@
         <ul>
             <li><a href="home.html">Home</a></li>
             <li><a href="rating.html">Rating</a></li>
+            <li><a href="stream.html">Stream<img src="http://icons.iconarchive.com/icons/pixelresort/peely/256/video-icon.png"></a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="play_with.html">Play with!</a></li>
         </ul>
     </div>
     <div id="ratingOrdering" class="rating_ordering">
         <ul>
             <li><p>&#183;</p></li>
-            <li><a id="season"  href="#second_season">Season II</a></li>
+            <li><a id="season"  href="#third_season">Season II</a></li>
             <li><a id="alltime" href="#all_time">All time</a></li>
             <li><p>&#183;</p></li>
         </ul>
     </div>
-    <!--<p class="season_left">Evenings left: </span>1</span></p>-->
+    <p class="season_left">Evenings left: </span>10</span></p>
     <div id="rating_content" class="content">
     </div>
 </body>
