--- a/thomas-corner/content/pages/stream.html
+++ b/thomas-corner/content/pages/stream.html
@@ -10,13 +10,14 @@
         <ul>
             <li><a href="home.html">Home</a></li>
             <li><a href="rating.html">Rating</a></li>
+            <li><a href="stream.html">Stream<img src="http://icons.iconarchive.com/icons/pixelresort/peely/256/video-icon.png"></a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="play_with.html">Play with!</a></li>
         </ul>
     </div>
     <div class="striming_wrapper">
-        <h2>Watch & Play</h2>
+        <h2>Watch & Learn</h2>
         <iframe src="//vk.com/video_ext.php?oid=-178698831&id=456239043&hash=7c76a0153299bc20&hd=2" width="850" height="480" frameborder="0" allowfullscreen></iframe>
+        <p style="" class="stream_description">Season 3, Ev. 1</p>
     </div>
 </div>
 </body>
