--- a/thomas-corner/content/pages/home.html
+++ b/thomas-corner/content/pages/home.html
@@ -16,8 +16,8 @@
         <ul>
             <li><a href="home.html">Home</a></li>
             <li><a href="rating.html">Rating</a></li>
+            <li><a href="stream.html">Stream<img src="http://icons.iconarchive.com/icons/pixelresort/peely/256/video-icon.png"></a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#">Play with!</a></li>
         </ul>
     </div>
     <div class="home_wrapper">
